<resources>
    <string name="app_name">Planetze</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_your_account">Register your account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="or">or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Don\'t have an account?"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signupSuccess">Signup Successful!</string>
    <string name="Welcome">\nwelcome to planetze, insert name</string>
    <string name="checkEmail"> \nPlease check your email to verify your account.</string>
    <string name="tapResend">\nDidn\'t receive an email? Tap the button below to resend the verification email.\n
    </string>
    <string name="resend">Resend confirmation email</string>
    <string name="goLogin">Go to login page</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="login_label">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="close">Close</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="EcoGuage">Eco Gauge</string>
    <string name="EcoBalance">Eco Balance</string>
    <string name="EcoHub">Eco Hub</string>
    <string name="thx">Thankyou for your patience.. we will need to add other fragments/actvities for each of the bottons</string>
    <string name="intro">You Carbon Emission is:</string>
    <string name="idk">.?.</string>
    <string name="title">Eco Balance</string>
    <string name="para1">Rergardless of how your carbon emission, we can all contribute to helping reduce carbonmissoin.
    We understand it is at times difficult to neutrilize emmiision, that we cannot control through sustainable behaviors habits.

We have provided offset emission  projects, which can help offset you carbon emission. Through purchasing carbon credits.
    </string>
    <string name="reducebutn">CLICK HERE TO REDUCE YOUR CARBON EMISSION</string>
    <string name="p1">Tester Paragraph</string>
    <string name="_11_nov">11 Nov</string>
    <string name="transportation">Transportation</string>
    <string name="please_select_an_answer">Please select an answer</string>
    <string name="asterisk">*</string>
    <string name="emission_breakdown_by_category">Emission breakdown by category.</string>
    <string name="compare_with">Compare with:</string>
    <string name="_1d">1D</string>
    <string name="_1m">1M</string>
    <string name="_1y">1Y</string>
    <string name="all">ALL</string>
    <string name="_1w">1W</string>
    <string name="n_a">N/A</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hlink1">  - <a href="https://natural-resources.canada.ca/energy-efficiency/products/appliances-for-residential-use/air-purifiers/14001">Air Purifiers \n</a>
    - <a href="https://natural-resources.canada.ca/energy-efficiency/products/appliances-for-residential-use/clothes-dryers/13696">Clothes Dryer \n</a>
        - <a href="https://natural-resources.canada.ca/energy-efficiency/products/office-equipment/computers/14051">Computer \n</a>
            - <a href="https://natural-resources.canada.ca/energy-efficiency/products/lighting/light-bulbs-or-lamps/13918">Light Bulbs \n</a>
         - <a href="https://natural-resources.canada.ca/energy-efficiency/products/appliances-for-commercial-use/commercial-steam-cookers/14083">Cookers \n</a>
         - <a href="https://natural-resources.canada.ca/energy-efficiency/products/water-heaters/solar/14562">Solar \n</a>
         - <a href="https://natural-resources.canada.ca/energy/products/categories/other/20100">Electric vehicle  chargers\n</a>


    </string>
    <string name="hlink2">  - <a href="https://www.eileenfisher.com/?utm_source=The+Good+Trade&amp;utm_medium=affiliate&amp;utm_content=1&amp;utm_campaign=acquisition_s_m4&amp;ranMID=42820&amp;ranEAID=DkqcY%2Fd68c0&amp;ranSiteID=DkqcY_d68c0-ZeVPHnTeOUuyKCbV478RCw">Eileen Fisher \n</a>
    - <a href="https://www.patagonia.com/shop/womens?irclickid=Uj%3AScNWaUxyKTfzR62zwD29ZUkCQ7u2hrXSGQw0&amp;sharedid=&amp;irpid=274622&amp;iradid=1948563&amp;utm_source=The%20Good%20Trade%E2%80%8A&amp;utm_medium=affiliate&amp;utm_content=%22Content%22&amp;irgwc=1">Patagonia \n</a>
        - <a href="https://www.tentree.com/?irclickid=Uj%3AScNWaUxyKTfzR62zwD29ZUkCQ7uT9rXSGQw0&amp;irgwc=1&amp;utm_source=impact&amp;utm_medium=affiliate&amp;utm_campaign=The%20Good%20Trade%E2%80%8A">Tentree \n</a>
            - <a href="https://www.outerknown.com/?avad=194478_c3db9cb55&amp;utm_source=155966&amp;utm_medium=affiliate">Outerknown \n</a>
         - <a href="https://jungmaven.com/">Jungmaven \n</a>
         - <a href="https://kotn.com/?sscid=b1k8_15amon&amp;utm_source=shareasale&amp;utm_medium=affiliate&amp;utm_campaign=1147855">Kotn \n</a>
         - <a href="https://harvestandmill.com/?sscid=b1k8_15aou7&amp;">Harvest &amp; Mill \n</a>
             - <a href="https://allbirds.ca/">Allbirds \n</a>


    </string>
</resources>