<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/palette_stormy_gray"
    tools:context=".EcoBalanceEntry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="218dp"
            android:layout_height="41dp"

            android:layout_marginStart="67dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="64dp"
            android:background="@color/palette_turquoise"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="45dp"
            android:layout_height="41dp"
            android:layout_marginEnd="60dp"
            android:background="@color/palette_turquoise"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/idk"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="152dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="440dp"
            android:layout_height="65dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="35dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="299dp"
            android:layout_height="253dp"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="44dp"
            android:background="@color/palette_light_gray"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/para1"
            android:textColor="@color/palette_black"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="295dp"
            android:layout_height="74dp"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="121dp"
            android:backgroundTint="@color/red"
            android:text="@string/reducebutn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
