<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="2dp">

        <!-- Main Text -->
        <TextView
            android:id="@+id/emissions_overview_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text=""
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Pie Chart Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            android:contentDescription="@string/emission_breakdown_by_category"
            android:background="@color/white">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp">

            </com.github.mikephil.charting.charts.LineChart>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            android:background="@color/white">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp">
            </com.github.mikephil.charting.charts.PieChart>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- Bar Chart -->
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp" />

                <!-- Divider -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/palette_light_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/compare_with"
                        android:textSize="16sp" />
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="227dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="18dp"
                        android:background="@color/palette_turquoise_tint_300"
                        app:layout_constraintBottom_toTopOf="@+id/graph2constraint"
                        app:layout_constraintStart_toEndOf="@+id/select_country" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/time_period_toggle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedButton="@+id/button_overall">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_daily"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1d"
                android:textColor="@color/palette_light_gray"
                app:backgroundTint="@color/custom_button_group_background"
                app:rippleColor="@color/palette_turquoise_tint_200"
                app:strokeColor="@color/palette_turquoise" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_weekly"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1w"
                android:textColor="@color/palette_light_gray"
                app:backgroundTint="@color/custom_button_group_background"
                app:rippleColor="@color/palette_turquoise_tint_200"
                app:strokeColor="@color/palette_turquoise" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_monthly"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1m"
                android:textColor="@color/palette_light_gray"
                app:backgroundTint="@color/custom_button_group_background"
                app:rippleColor="@color/palette_turquoise_tint_200"
                app:strokeColor="@color/palette_turquoise" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_yearly"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1y"
                android:textColor="@color/palette_light_gray"
                app:backgroundTint="@color/custom_button_group_background"
                app:rippleColor="@color/palette_turquoise_tint_200"
                app:strokeColor="@color/palette_turquoise" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_overall"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all"
                android:textColor="@color/palette_light_gray"
                app:backgroundTint="@color/custom_button_group_background"
                app:rippleColor="@color/palette_turquoise_tint_200"
                app:strokeColor="@color/palette_turquoise" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</ScrollView>
